# traders

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_COMMANDS.md  LICENSE  README.md  TODOS.md  check_import.py  commit_msg.txt  package.json  stock_valuation_cash_workbook.xlsx
apps/trader_app/: MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py
apps/trader_app/tests/: test_commercial_totals.py  test_daybook.py  test_daybook_integration.py  test_sales_lifecycle.py  test_sales_lifecycle_integration.py  test_seed_super_admin.py  test_tenant_guard.py  test_tenant_isolation.py
apps/trader_app/trader_app/: hooks.py  modules.txt
apps/trader_app/trader_app/api/: __init__.py  _tenant_guard.py  admin.py  ar.py  audit.py  bundling.py  catalog.py  commercial_totals.py  company.py  config_store.py  currency.py  customer_pack.py  customers.py  dashboard.py  daybook.py  decision_log.py  finance.py  fx_policy.py  grouped_invoicing.py  gst.py  hierarchy.py  inventory.py  invoice_types.py  migration_toolkit.py  opportunity.py  permissions.py  pos.py  posting.py  printing.py  process.py  purchases.py  quotation_defaults.py  reports.py  rules.py  sales.py  settings.py  super_admin.py  suppliers.py  tax_policy.py  templates.py  (+1 more)
apps/trader_app/trader_app/demo/: __init__.py
apps/trader_app/trader_app/scripts/: __init__.py  apply_daybook_profile.py  e2e_electrence_sample_quotation.py  provision_ar.py  provision_customer_pack.py  provision_opportunity.py  rename_electrence_tenant.py
apps/trader_app/trader_app/setup/: __init__.py  custom_fields.py  (+4 more)
(+420 files in other folders)
