[metadata]
name = trader_app
version = 1.0.0
description = Trader Business System — Custom ERPNext Application
long_description = file: README.md
long_description_content_type = text/markdown
author = Traders
author_email = dev@traders.local
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
